# Simula_Summer_Project_1

./: .gitignore  CITATION.cff  LICENSE  README.md  _config.yml  _toc.yml  environment.yml  pyproject.toml
.github/workflows/: build_docs.yml  test_package.yml
docker/: Dockerfile
docs/: api.rst
example/: Initial Value Plots.ipynb  MC1_timedata.pkl  Plot Stimulation Data.ipynb  Plots.ipynb  example_simulation.py  final_points.txt  plotter.py  project_simulation.py
example/.ipynb_checkpoints/: Initial Value Plots-checkpoint.ipynb  Plot Stimulation Data-checkpoint.ipynb
example/results/data/M3/PDE/: results.h5
example/results/data/MC1/PDE/: results.h5
example/results/data/MC2/PDE/: results.h5
example/results/data/MC3/PDE/: results.h5
example/results/data/MC4/PDE/: results.h5
example/results/data/MC5/PDE/: results.h5
example/results/data/MC7/PDE/: results.h5
example/results/stimulation_data/timedata/: MC1.pkl  MC2.pkl  MC3.pkl  MC5.pkl
src/ffian/: __init__.py
src/ffian/flow_model/: __init__.py  model.py  model_base.py  solver_flow_model.py
src/ffian/project_flow_models/: __init__.py  modelMC1.py  modelMC2.py  modelMC3.py  modelMC4.py  modelMC5.py  modelMC6.py  modelMC7.py  model_base.py  solver_flow_model.py
src/ffian/zero_flow_model/: __init__.py  model.py  model_base.py  solver_zero_flow_model.py
tests/: test_flow_model.py  test_zero_flow_model.py
